# MyvivioCRM

./: .gitignore  .replit  check_db.py  metavida_app.py  migrar_banco_b2b.py  popular_contratos_exemplo.py  popular_jornadas_exemplo.py  pyproject.toml  replit.md
attached_assets/: Pasted--Assumindo-que-voc-est-usando-FullCalendar-function-ini_1765877332639.txt  Pasted--Corre-o-do-M-dulo-de-Calend-rio-para-MVP-MyvivioCRM-Es_1765878974962.txt  Pasted--Endpoints-de-Calend-rio-Agenda-da-1765877026105_1765877026106.txt  Pasted--Funcionalidades-Principais-Calend-rio-Semanal-Interativo-Visualiza-o-semanal-com-dias-da-seman-1760438847447_1760438847448.txt  Pasted--L-gica-de-Automa-o-e-Fluxo-de-Tra-1763825216226_1763825216229.txt  Pasted--MyvivioCRM-Gym-Corporate-Welln-1763819531510_1763819531512.txt  Pasted--MyvivioCRM-Gym-Corporate-Welln-1763895557452_1763895557453.txt  Pasted--MyvivioCRM-Gym-Corporate-Welln-1763896007072_1763896007074.txt  Pasted--PROMPT-COMPLETO-PARA-O-REPLIT-SE-O-GRUPOS-VIVIO-VERS-O-AVAN-ADA-IA-Objetivo--1763317848614_1763317848616.txt  Pasted--Prompt-Unificado-para-Desenvolvimento-da-Se-o-Question-rios-do-CRM-VIVIO-Objetivo-Ger-1763215179991_1763215179995.txt  Pasted--Prompt-Unificado-para-Desenvolvimento-da-Se-o-de-Automa-o-do-CRM-VIVIO-Objetivo-Geral--1763209590897_1763209590899.txt  Pasted--python-metavida-app-py-Back-1759935904502_1759935904503.txt  Pasted-Crie-um-backend-completo-com-FastAPI-SQLite-no-MVP-e-suporte-a-JWT-Auth-inspirado-no-app-Technog-1760132753555_1760132753560.txt  (+3 more)
static/css/: style.css
templates/: demo.html  index.html
(+2 files in other folders)
