[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiosmtplib>=4.0.2",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.118.2",
    "matplotlib>=3.10.7",
    "passlib>=1.7.4",
    "pydantic>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "reportlab>=4.4.4",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
